# Mesosfer

./: .env.example  .gitignore  DATASET.md  DATASET2.md  LICENSE  README.md  RUN_AMD.md  RUN_NVIDIA.md  pyproject.toml  upload_model to_hf.md  upload_model_to_hf.md
data/cloud/: azure_activity.json  azure_activity2.json  cloudtrail.json  cloudtrail2.json  gcp_audit.json  gcp_audit2.json
data/cloud_nl/: azure_activity.jsonl  azure_activity2.jsonl  cloudtrail.jsonl  cloudtrail2.jsonl  gcp_audit.jsonl  gcp_audit2.jsonl
data/log/: c2_dns.jsonl  log.jsonl  sysmon.xml  webshell.xml  winevent.xml  winevent2.xml
data/log_nl/: apache.jsonl  apache2.jsonl  auth.jsonl  auth2.jsonl  c2_dns.jsonl  cef.jsonl  conn.jsonl  conn2.jsonl  log.jsonl  privesc.jsonl  syslog_benign.jsonl  sysmon.jsonl  webshell.jsonl  winevent.jsonl  winevent2.jsonl
data/reverse-engineering/: .gitkeep  reverse.jsonl
data/rlhf/: README.md
data/sft/: README.md  atmosfer_validation_conversations.jsonl  atmosfer_validation_conversations_en.jsonl  cloud_security_sft.jsonl  cloud_security_sft_en.jsonl  cyber_defensive_conversations.jsonl  cyber_defensive_conversations_en.jsonl  gemini_teacher_conversations.jsonl  identity_conversations.jsonl  identity_conversations_en.jsonl  instruction_following_conversations_en.jsonl  mesosfer_validation_conversations.jsonl  multi_turn_soc_sft.jsonl  mythos_combined_sft.jsonl  mythos_combined_sft_en.jsonl  mythos_tool_calling.jsonl  mythos_tool_calling_en.jsonl  rules.jsonl  safety_artifact_conversations_en.jsonl  tool_calling_conversations_en.jsonl  (+1 more)
dev/: convert_mythos_to_tool_calling.py  generate_instruction_following_sft.py  generate_safety_artifact_sft.py  generate_tool_calling_sft.py
mesosfer/: ui.html
ozon/: ui.html
runs/: miniseries.sh  runcpu.sh  scaling_laws.sh  speedrun.sh
scripts/: _ui.py  download_artifacts_from_hf.py  upload_checkpoint_to_hf.py
tasks/: customjson.py  cybersec_rl.py  cybersec_sft.py  humaneval.py  spellingbee.py
tests/: test_attention_fallback.py  test_engine.py  test_install_config.py  test_prepare_data.py  test_tokenizer.py  test_torch_backend_selector.py
(+48 files in other folders)
